--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
-#ignore modelsim from quartus
-simulation/**
-db/**
-incremental_db/**
-output_files/**
+#ignore modelsim simulation files
+**/[Mm]odelsim/rtl_work/**
+**/[Mm]odelsim/work/**
+**/[Mm]odelsim/vsim.wlf
+**/[Mm]odelsim/msim_transcript
 
-#ignore backup files
-*.bak
+#ignore modelsim from quartus
+**/[Qq]uartus/simulation/**
+**/[Qq]uartus/db/**
+**/[Qq]uartus/incremental_db/**
+**/[Qq]uartus/output_files/**
+
+#ignore quartus backup files
+**/*.bak
