--- a/quartus/bf-processor.qsf
+++ b/quartus/bf-processor.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "MAX 10"
 set_global_assignment -name DEVICE 10M08DAF484C8G
-set_global_assignment -name TOP_LEVEL_ENTITY memory_datapath
+set_global_assignment -name TOP_LEVEL_ENTITY foward_jumping_datapath
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "11:13:14  JULHO 23, 2023"
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.1 Lite Edition"
@@ -56,9 +56,6 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS NOT_USED -section_id eda_simulation
 set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH testbench_memory_datapath -section_id eda_simulation
 set_global_assignment -name VHDL_FILE ../src/registry.vhd
@@ -67,4 +64,10 @@ set_global_assignment -name VHDL_FILE ../src/mux2.vhd
 set_global_assignment -name VHDL_FILE ../src/memory_datapath.vhd
 set_global_assignment -name VHDL_FILE ../src/instrdecoder.vhd
 set_global_assignment -name VHDL_FILE ../src/addersubtractor.vhd
+set_global_assignment -name VHDL_FILE ../src/is_zero.vhd
+set_global_assignment -name VHDL_FILE ../src/instruction_datapath.vhd
+set_global_assignment -name VHDL_FILE ../src/foward_jumping_datapath.vhd
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
