--- a/quartus/bf-processor.qsf
+++ b/quartus/bf-processor.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "MAX 10"
 set_global_assignment -name DEVICE 10M08DAF484C8G
-set_global_assignment -name TOP_LEVEL_ENTITY foward_jumping_datapath
+set_global_assignment -name TOP_LEVEL_ENTITY jumping_datapath
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "11:13:14  JULHO 23, 2023"
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.1 Lite Edition"
@@ -67,6 +67,7 @@ set_global_assignment -name VHDL_FILE ../src/addersubtractor.vhd
 set_global_assignment -name VHDL_FILE ../src/is_zero.vhd
 set_global_assignment -name VHDL_FILE ../src/instruction_datapath.vhd
 set_global_assignment -name VHDL_FILE ../src/foward_jumping_datapath.vhd
+set_global_assignment -name VHDL_FILE ../src/jumping_datapath.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
